--- a/package.json
+++ b/package.json
@@ -3,7 +3,9 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "@fancyapps/ui": "^5.0.19",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
@@ -13,14 +15,19 @@
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
     "antd": "^5.8.4",
+    "laravel-echo": "^1.15.2",
+    "moment": "^2.29.4",
+    "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
+    "react-lines-ellipsis": "^0.15.3",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
+    "react-textarea-autosize": "^8.5.3",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
@@ -52,6 +59,7 @@
     ]
   },
   "devDependencies": {
+    "@types/react-lines-ellipsis": "^0.15.1",
     "craco": "^0.0.3",
     "sass": "^1.66.1"
   }
