--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@types/node": "^16.18.40",
     "@types/react": "^18.2.20",
     "@types/react-dom": "^18.2.7",
+    "@types/react-outside-click-handler": "^1.3.1",
     "antd": "^5.8.4",
     "laravel-echo": "^1.15.2",
     "moment": "^2.29.4",
@@ -23,6 +24,7 @@
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
     "react-lines-ellipsis": "^0.15.3",
+    "react-outside-click-handler": "^1.3.0",
     "react-redux": "^8.1.2",
     "react-router-dom": "^6.15.0",
     "react-scripts": "5.0.1",
