--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "dependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
     "@craco/craco": "^7.1.0",
+    "@faker-js/faker": "^8.0.2",
     "@fancyapps/ui": "^5.0.19",
     "@reduxjs/toolkit": "^1.9.5",
     "@testing-library/jest-dom": "^5.17.0",
@@ -16,10 +17,12 @@
     "@types/react-dom": "^18.2.7",
     "@types/react-outside-click-handler": "^1.3.1",
     "antd": "^5.8.4",
+    "chart.js": "^4.4.0",
     "laravel-echo": "^1.15.2",
     "moment": "^2.29.4",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
+    "react-chartjs-2": "^5.2.0",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
