--- a/package.json
+++ b/package.json
@@ -19,10 +19,12 @@
     "antd": "^5.8.4",
     "chart.js": "^4.4.0",
     "laravel-echo": "^1.15.2",
+    "loaders.css": "^0.1.2",
     "moment": "^2.29.4",
     "pusher-js": "^8.3.0",
     "react": "^18.2.0",
     "react-chartjs-2": "^5.2.0",
+    "react-countdown": "^2.3.5",
     "react-dom": "^18.2.0",
     "react-icons": "^4.10.1",
     "react-intersection-observer": "^9.5.2",
@@ -33,6 +35,7 @@
     "react-scripts": "5.0.1",
     "react-spinners": "^0.13.7",
     "react-textarea-autosize": "^8.5.3",
+    "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
     "typescript": "^4.9.5",
@@ -40,7 +43,7 @@
     "web-vitals": "^2.1.4"
   },
   "scripts": {
-    "start": "craco start",
+    "start": "export HTTPS=true&&SSL_CRT_FILE=cert.pem&&SSL_KEY_FILE=key.pem craco start",
     "build": "craco build",
     "test": "craco test",
     "eject": "react-scripts eject"
