--- a/package.json
+++ b/package.json
@@ -38,6 +38,7 @@
     "react-timer-hook": "^3.0.7",
     "react-toastify": "^9.1.3",
     "redux": "^4.2.1",
+    "swiper": "^10.2.0",
     "typescript": "^4.9.5",
     "typescript-cookie": "^1.0.6",
     "web-vitals": "^2.1.4"
