--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/react-outside-click-handler": "^1.3.1",
     "antd": "^5.8.4",
     "chart.js": "^4.4.0",
+    "dayjs": "^1.11.10",
     "laravel-echo": "^1.15.2",
     "loaders.css": "^0.1.2",
     "moment": "^2.29.4",
